--- a/game/index.html
+++ b/game/index.html
@@ -7,15 +7,117 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.birds.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="nav_style.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="game.css" />
   </head>
   <body>
+    <!-- Navbar -->
+    <nav id="navbar">
+      <ul class="navbar-items flexbox-col">
+        <li class="navbar-logo flexbox-left">
+          <a class="navbar-item-inner flexbox">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              id="Layer_1"
+              data-name="Layer 1"
+              viewBox="0 0 1438.88 1819.54"
+            >
+              <polygon
+                points="925.79 318.48 830.56 0 183.51 1384.12 510.41 1178.46 925.79 318.48"
+              />
+              <polygon
+                points="1438.88 1663.28 1126.35 948.08 111.98 1586.26 0 1819.54 1020.91 1250.57 1123.78 1471.02 783.64 1663.28 1438.88 1663.28"
+              />
+            </svg>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a
+            class="navbar-item-inner flexbox-left"
+            href="https://www.naver.com"
+          >
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="log-in-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="login">Login</span>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a
+            class="navbar-item-inner flexbox-left"
+            href="https://www.naver.com"
+          >
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="newspaper-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="about">About Interactive</span>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a
+            class="navbar-item-inner flexbox-left"
+            href="https://www.naver.com"
+          >
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="images-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="gallery">360VR Gallery</span>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a
+            class="navbar-item-inner flexbox-left"
+            href="https://www.naver.com"
+          >
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="film-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="movie">Interactive Movie</span>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a class="navbar-item-inner flexbox-left" href="index.html">
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="game-controller-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="game">Quiz Game</span>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a
+            class="navbar-item-inner flexbox-left"
+            href="https://www.naver.com"
+          >
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="people-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="team">Team</span>
+          </a>
+        </li>
+        <li class="navbar-item flexbox-left">
+          <a class="navbar-item-inner flexbox-left" id="change-lang" href="#">
+            <div class="navbar-item-inner-icon-wrapper flexbox">
+              <ion-icon name="text-outline" size="large"></ion-icon>
+            </div>
+            <span class="link-text" data-i18n="language">KO (한국어)</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <div class="container">
       <div class="wrapper">
         <div class="content">
-          <div id="gameTitle">Quiz Game</div>
+          <div id="gameTitle">퀴즈 게임</div>
 
-          <button id="modalOpen">Game Start</button>
+          <button id="modalOpen">게임 시작</button>
 
           <!-- The Modal -->
           <div id="myModal" class="modal">
@@ -46,7 +148,7 @@
         </div>
       </div>
     </div>
-
+    <script src="nav_script.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
