--- a/game/Login.html
+++ b/game/Login.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz Game</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.birds.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <title>회원가입 / 로그인</title>
+    <link rel="stylesheet" href="./Login.css" />
+
     <link rel="stylesheet" href="nav_style.css" />
     <script
       type="module"
@@ -16,16 +15,16 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+
     <!-- 파이어베이스 스크립트 -->
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
-    <link rel="stylesheet" href="game.css" />
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- 사이드바 nav -->
     <nav id="navbar">
       <ul class="navbar-items flexbox-col">
         <li class="navbar-logo flexbox-left">
@@ -45,7 +44,10 @@
             </svg>
           </a>
         </li>
+
         <li class="navbar-item flexbox-left">
+          <!-- a태그안에 id=loggoutBtn이랑 span태그안에 login_out 각 페이지.html마다 추가하고 
+                  파이어베이스js 스크립트 src추가해야댐-->
           <a
             id="logoutBtn"
             class="navbar-item-inner flexbox-left"
@@ -121,46 +123,58 @@
         </li>
       </ul>
     </nav>
-    <div class="container">
-      <div class="wrapper">
-        <div class="content">
-          <div id="gameTitle">퀴즈 게임</div>
-          <div id="insertcoin"><p id="coinP">INSERT COIN</p></div>
-          <button id="modalOpen">게임 시작</button>
 
-          <!-- The Modal -->
-          <div id="myModal" class="modal">
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p class="question" id="question">
-                Q1: 인터랙티브 미디어란 무엇을 의미하나요?
-              </p>
-              <div id="answerBox">
-                <div class="progress-container">
-                  <div class="progress-bar" id="progressBar"></div>
-                </div>
-                <button class="answer" onclick="checkAnswer(1)">
-                  사용자가 콘텐츠와 상호작용할 수 있는 미디어
-                </button>
-                <button class="answer" onclick="checkAnswer(0)">
-                  일방적으로 전달되는 미디어
-                </button>
-              </div>
-              <p id="score">점수: 0</p>
-            </div>
+    <div class="form-title" data-i18n="lj">회원가입 / 로그인</div>
+    <form name="frm" action="#" onsubmit="return false;">
+      <div class="form signup">
+        <div class="form-header">
+          <div class="show-signup" data-i18n="join">회원가입</div>
+          <div class="show-signin" data-i18n="login">로그인</div>
+        </div>
+        <div class="arrow"></div>
+        <div class="form-elements">
+          <div class="form-element">
+            <input type="text" name="id" placeholder="아이디를 입력하세요" />
           </div>
-          <!-- Ranking Section -->
-          <div id="ranking">
-            <h3>실시간 랭킹</h3>
-            <ul id="rankingList">
-              <!-- 랭킹 항목들이 여기에 추가됩니다 -->
-            </ul>
+          <div class="form-element">
+            <input
+              type="password"
+              name="pw"
+              placeholder="비밀번호를 입력하세요."
+            />
           </div>
+          <div class="form-element">
+            <input type="password" placeholder="비밀번호를 재입력하세요." />
+          </div>
+          <div class="form-element">
+            <input type="text" name="name" placeholder="이름을 입력하세요." />
+          </div>
+          <div class="form-element">
+            <input type="tel" name="tel" placeholder="000-0000-0000" />
+          </div>
+          <div class="form-element">
+            <input
+              type="email"
+              name="email"
+              placeholder="example@example.com"
+            />
+          </div>
+          <button type="button" id="submit-btn" data-i18n="join">
+            회원가입
+          </button>
+          <button
+            type="button"
+            id="submit-btn-login"
+            data-i18n="login"
+            style="display: none"
+          >
+            로그인
+          </button>
         </div>
       </div>
-    </div>
+    </form>
+    <script src="./Login.js"></script>
     <script src="nav_script.js"></script>
-    <script src="game.js"></script>
+    <script src="FireBase.js"></script>
   </body>
 </html>
